--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,10 @@
-<div class="page">
+<div id="wrapper">
     <h1>选电影</h1>
+    <div class="tags">
+        <div class="tag-list">
+            <div class="tag" *ngFor="let tag of tags;index as i;" [ngClass]="{'active':i==selectTag}" (click)="selectTag=i">
+                {{tag}}
+            </div>
+        </div>
+    </div>
 </div>
