--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-.page {
-    //width: ;
+#wrapper {
+    width: 1040px;
+    margin: 40px auto;
+}
+
+h1 {
+    font-size: 26px;
 }
